# CSC5001_Project

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  main.c  nbody_functions.h
cuda/: CMakeLists.txt
cuda/brute_force/: CMakeLists.txt  nbody_brute_force.cu
cuda/brute_force/v1/: nbody_brute_force.cu
cuda/brute_force/v2/: nbody_brute_force.cu
cuda/brute_force/v3/: nbody_brute_force.cu
mpi/: nbody_barnes_hut.c  nbody_brute_force.c  nbody_brute_force.h
mpi/barnes_hut/v1/: nbody_barnes_hut.c  nbody_barnes_hut.h
mpi/barnes_hut/v2/: nbody_barnes_hut.c
mpi/brute_force/: nbody_brute_force.c
mpi/brute_force/v1/: nbody_brute_force.c
openmp-mpi/: nbody_brute_force.c
openmp-mpi/barnes_hut/v1/: nbody_barnes_hut.c  tests
openmp-mpi/barnes_hut/v2/: nbody_barnes_hut.c
openmp-mpi/brute_force/v1/: nbody_brute_force.c
openmp/barnes_hut/v1/: nbody_barnes_hut.c  nbody_barnes_hut.h  tests
openmp/barnes_hut/v2/: nbody_barnes_hut.c
openmp/barnes_hut/v3/: nbody_barnes_hut.c
openmp/barnes_hut/v4/: nbody_barnes_hut.c
openmp/brute_force/v0/: nbody_brute_force.c  tests
openmp/brute_force/v1/: nbody_brute_force.c  nbody_brute_force.h
openmp/brute_force/v2/: nbody_brute_force.c  nbody_brute_force.h
openmp/brute_force/v3/: nbody_brute_force.c
sequential/: nbody_barnes_hut.c  nbody_barnes_hut.h  nbody_brute_force.c  nbody_brute_force.h
tests/: nbody_barnes_hut_test.c  nbody_brute_force_test.c
tests/valid_impl/: nbody_barnes_hut.c  nbody_barnes_hut.h  nbody_brute_force.c  nbody_brute_force.h
utils/nbody/: nbody.h  nbody_alloc.c  nbody_alloc.h  nbody_tools.c  nbody_tools.h
utils/ui/: ui.c  ui.h  xstuff.c  xstuff.h
